--- a/BiliLoginMobile/BiliLogin/App.xaml
+++ b/BiliLoginMobile/BiliLogin/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="BiliLoginMobile.App"
+﻿<Application x:Class="BiliLogin.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:BiliLoginMobile"
+             xmlns:local="clr-namespace:BiliLogin"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
