--- a/BiliLoginMobile/BiliLogin/MoblieLoginWindow.xaml
+++ b/BiliLoginMobile/BiliLogin/MoblieLoginWindow.xaml
@@ -6,7 +6,29 @@
         xmlns:local="clr-namespace:BiliLogin"
         mc:Ignorable="d"
         xmlns:gif="clr-namespace:WpfAnimatedGif"
-        Title="MoblieLoginWindow" Height="512" Width="452" BorderThickness="16" WindowStyle="None" AllowsTransparency="True" Background="Transparent" ResizeMode="CanMinimize" Topmost="True" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" Loaded="Window_Loaded">
+        Title="登录Bilibili" Icon="icon.ico" Height="512" Width="452" BorderThickness="16" WindowStyle="None" AllowsTransparency="True" Background="Transparent" ResizeMode="CanMinimize" Topmost="True" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" Loaded="Window_Loaded">
+    <Window.Resources>
+        <Storyboard x:Key="ExitBtnMouseEnter">
+            <ColorAnimation Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)"
+                            BeginTime="00:00:00.000" To="#FF00b5e5"
+                            Duration="00:00:00.200"/>
+        </Storyboard>
+        <Storyboard x:Key="ExitBtnMouseLeave">
+            <ColorAnimation Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)"
+                            BeginTime="00:00:00.000" To="#FF00a1d6"
+                            Duration="00:00:00.200"/>
+        </Storyboard>
+        <Storyboard x:Key="CloseBtnMouseEnter">
+            <ColorAnimation Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)"
+                            BeginTime="00:00:00.000" To="#FF00A1D6"
+                            Duration="00:00:00.200"/>
+        </Storyboard>
+        <Storyboard x:Key="CloseBtnMouseLeave">
+            <ColorAnimation Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)"
+                            BeginTime="00:00:00.000" To="#FF68CAED"
+                            Duration="00:00:00.200"/>
+        </Storyboard>
+    </Window.Resources>
     <Window.Effect>
         <DropShadowEffect ShadowDepth="1" BlurRadius="16" Direction="270" Opacity="0.5" Color="#FF211613"/>
     </Window.Effect>
@@ -39,7 +61,7 @@
         <Button x:Name="CloseBtn" Width="29" Height="29" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,0" Padding="0" BorderThickness="0" Click="CloseBtn_Click" Cursor="Hand">
             <Button.Style>
                 <Style TargetType="Button">
-                    <Setter Property="Background" Value="#00FFFFFF"/>
+                    <Setter Property="Background" Value="#FF68CAED"/>
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type Button}">
@@ -50,9 +72,12 @@
                         </Setter.Value>
                     </Setter>
                     <Style.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#FF00A1D6"/>
-                        </Trigger>
+                        <EventTrigger RoutedEvent="Button.MouseEnter">
+                            <BeginStoryboard Storyboard="{StaticResource CloseBtnMouseEnter}"/>
+                        </EventTrigger>
+                        <EventTrigger RoutedEvent="Button.MouseLeave">
+                            <BeginStoryboard Storyboard="{StaticResource CloseBtnMouseLeave}"/>
+                        </EventTrigger>
                     </Style.Triggers>
                 </Style>
             </Button.Style>
@@ -168,9 +193,12 @@
                             </Setter.Value>
                         </Setter>
                         <Style.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#FF00b5e5"/>
-                            </Trigger>
+                            <EventTrigger RoutedEvent="Button.MouseEnter">
+                                <BeginStoryboard Storyboard="{StaticResource ExitBtnMouseEnter}"/>
+                            </EventTrigger>
+                            <EventTrigger RoutedEvent="Button.MouseLeave">
+                                <BeginStoryboard Storyboard="{StaticResource ExitBtnMouseLeave}"/>
+                            </EventTrigger>
                         </Style.Triggers>
                     </Style>
                 </Button.Style>
