--- a/BiliLoginMobile/BiliLogin/MoblieLoginWindow.xaml
+++ b/BiliLoginMobile/BiliLogin/MoblieLoginWindow.xaml
@@ -62,6 +62,7 @@
             <Button.Style>
                 <Style TargetType="Button">
                     <Setter Property="Background" Value="#FF68CAED"/>
+                    <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type Button}">
@@ -183,6 +184,7 @@
                 <Button.Style>
                     <Style TargetType="Button">
                         <Setter Property="Background" Value="#FF00a1d6"/>
+                        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType="{x:Type Button}">
